--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="followers">Followers</string>
     <string name="following">Following</string>
     <string name="repository">Repository</string>
+    <string name="search">Search</string>
 </resources>
